# ray-log-notebook

./: README.md  dprint.json  pyproject.toml  ruff.toml
.github/workflows/: public.yml
notebooks/: showcase.ipynb  test_client.ipynb  test_local.ipynb
src/ray_log_notebook/: __init__.py  _tail.py  capture.py  notebook.py
tests/: test_notebook_execution.py
